<resources>


    // google sign in
    <string name="server_client_id">1068948631206-iv07elujphauo3olr57d4jpm15p3ts8c.apps.googleusercontent.com</string>
    // Sign in strings
    <string name="app_name" translatable="false">sayaradz</string>
    <string name="signout">SignOut</string>
    <string name="facebook_app_id">367651757216742</string>
    <string name="fb_login_protocol_scheme">fb367651757216742</string>


    // Announce strings
    <string name="general">Information principales</string>
    <string name="options">Options</string>
    <string name="picture">Photos</string>
    <string name="colors">Couleur</string>
    <string name="kilometrage">Kilométrage</string>
    <string name="storage_permition_rationale_message">----</string>
    <string name="aperçu" translatable="false">Aperçu</string>

    <string name="year">Année</string>
    <string name="Fuel">Fuel</string>
    <string name="price_sign" translatable="false">DZA</string>
    <string name="distance_sign" translatable="false">KM</string>

    <string name="confirming_question">Voulez-vous supprimer cette annonce ?</string>


    // for test
    <string-array name="city_list">
        <item>Bangkok</item>
        <item>London</item>
        <item>Paris</item>
        <item>Singapore</item>
        <item>New York</item>
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Kuala Lumpur</item>
        <item>Hong Kong</item>
        <item>Barcelona</item>

    </string-array>


    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="prix">Prix</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Mon Profile</string>
    <string name="menu_command">Mes Commandes</string>
    <string name="menu_offer">Mes Offres</string>
    <string name="menu_followed">Following</string>
    <string name="menu_favored">Favoris</string>
    <string name="menu_send">Send</string>
    <string name="menu_help">Support</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_share">Partager SayaraDz</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="check_the_website">Check the website</string>
    <string name="menu_deconect">Log Out</string>
    <string name="recherche_avanc_e">Recherche Avancée</string>

    <string name="commnader">Commnader</string>
    <string name="quantite">quantite</string>

    <string name="owner_information">Owner Information</string>
    <string name="offer_request">Faire un Offre</string>
    <string name="_07582396114">07582396114</string>
    <string name="cars">cars</string>
    <string name="hint">Ajouter une description</string>
    <string name="title_activity_offre">OffreActivity</string>
    <string name="commander_acc">Commander une Voiture</string>
    <string name="fiche_acc">Fiche Technique</string>
    <string name="rech_acc">Recherche</string>
    <string name="occ_acc">Véhicules Occasions</string>
    <string name="acc">Acceuille</string>
    <string name="announce_acc">Mes Annonces</string>
    <string name="fav_acc">Favoris</string>
    <string name="seller">Seller Personnel Info</string>
    <string name="appeler">Appeler</string>
    <string name="owner">Your Personnel Indo</string>
    <string name="Gérer">Gérer</string>
    <string name="confirm">Confirmer</string>

    <string name="modele">Modèle</string>
    <string name="marque">Marque</string>
    <string name="version">Version</string>
    <string name="title_activity_annonce_offers">AnnonceOffersActivity</string>
    <string name="offre">Offre</string>
    <string name="nouvelles_voitures">Nouvelles Versions</string>
    <string name="add_your_pics_here">add Your pics here</string>
    <string name="valider_annonce">Valider l\'annonce</string>
    <string name="ajouter_une_description">Ajouter une description</string>
    <string name="other_information">Autres Information</string>
    <string name="price">Prix minimal</string>
    <string name="pay_hint">0.00 DA</string>
    <string name="km_hint">0.0 Kms</string>
</resources>
