<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <TextView
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carburant_title"
            android:text="@string/Fuel"
            android:clickable="false"
            android:textSize="15sp"
    />


    <include layout="@layout/fuel_chooser"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:id="@+id/years_title"
            android:text="@string/year"
            android:clickable="false"
            android:textSize="15sp"
            android:layout_below="@id/scroll_carbur"
    />

    <include
            layout="@layout/years_chooser"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:id="@+id/price_title"
            android:text="@string/prix"
            android:clickable="false"
            android:textSize="14sp"
            android:layout_below="@id/date_holder"
    />


    <include
            android:layout_below="@id/price_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/price_chooser"
            android:id="@+id/price_range_holder"

    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/km_title"
            android:text="@string/kilometrage"
            android:clickable="false"
            android:textSize="14sp"
            android:layout_below="@id/price_range_holder"
    />




   <include
           android:layout_below="@id/km_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           layout = "@layout/km_chooser"
   />
</RelativeLayout>