<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
>

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:showDividers="beginning|middle|end"
            android:weightSum="14">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/txt_gen"
            />

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_below="@+id/lin_version"
                    android:id="@+id/lin_carburant"
                    android:background="@drawable/spinner_layout_style"
                    android:layout_height="wrap_content">

                <Spinner
                        style="@style/spinner_style"
                        android:id="@+id/carburant_spinner"
                        android:background="@android:color/transparent"
                />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:id="@+id/lin_marque"
                    android:layout_below="@id/txt_gen"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/spinner_layout_style"
                    android:layout_height="wrap_content">

                <Spinner
                        style="@style/spinner_style"
                        android:id="@+id/marque_spinner"
                        android:prompt="@string/marque"
                        android:background="@android:color/transparent"
                />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_below="@id/lin_marque"
                    android:id="@+id/lin_modele"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/spinner_layout_style"
                    android:layout_height="wrap_content">

                <Spinner
                        style="@style/spinner_style"
                        android:id="@+id/modele_spinner"
                        android:background="@android:color/transparent"
                        android:prompt="@string/modele"
                />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:id="@+id/lin_version"
                    android:layout_below="@id/lin_modele"
                    android:background="@drawable/spinner_layout_style"
                    android:layout_height="wrap_content">

                <Spinner
                        style="@style/spinner_style"
                        android:id="@+id/versions_spinner"
                        android:prompt="@string/version"
                        android:background="@android:color/transparent"
                />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:id="@+id/lin_year"
                    android:layout_below="@id/lin_carburant"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Année"
                />
                <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="wrap_content"
                        android:background="@drawable/spinner_layout_style"
                        android:layout_weight="30"
                        android:id="@+id/years_picker"
                        android:layout_height="wrap_content"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_below="@id/lin_year"
                    android:id="@+id/lin_coul"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                />
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_couleur"
                        android:hint="Ex. Black"

                />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_below="@id/lin_coul"
                    android:id="@+id/lin_km"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/kilometrage"
                />
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_km"
                        android:hint="@string/km_hint"
                        android:textAlignment="textEnd"

                />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_below="@id/lin_km"
                    android:id="@+id/lin_prix"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                />
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_prix"
                        android:inputType="numberDecimal"
                        android:hint="@string/pay_hint"
                        android:textAlignment="textEnd"

                />

            </android.support.v7.widget.LinearLayoutCompat>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="5dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
        >
            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_information"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_marginBottom="45dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
            />
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp"
                    android:textColor="@android:color/secondary_text_light"
                    android:hint="@string/ajouter_une_description"
                    android:id="@+id/input_description"
                    android:layout_marginBottom="20dp"
                    android:padding="20dp"
            />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="5dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
        >
            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_marginBottom="45dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
            />

            <android.support.design.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="50dp"
                    android:id="@+id/options_chips"
                    android:theme="@style/Theme.MaterialComponents"
            >

            </android.support.design.chip.ChipGroup>
            <android.support.design.widget.TextInputEditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:visibility="invisible"
                    android:id="@+id/option_input"
                    android:hint="@string/app_name"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
        >
            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_marginBottom="45dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
            />

            <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center|top"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    android:id="@+id/add_picture"
            />
            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="100dp"
                    android:gravity="bottom"
                    android:text="@string/add_your_pics_here"/>
            <android.support.design.circularreveal.CircularRevealGridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/spinner_style"
                    android:id="@+id/pictures_layout"
                    android:layout_marginTop="100dp"
                    android:columnCount="3"
                    android:rowCount="2"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
            />
        </android.support.v7.widget.CardView>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valider_annonce"
                android:padding="15dp"
                android:textStyle="bold"
                android:background="@drawable/item_button_commande"
                android:id="@+id/button_validate"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
