<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="12"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                >
                    <include
                            layout="@layout/item_couleur"
                            android:id="@+id/layout_color"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:gravity="center"/>
                    <TextView
                            android:id="@+id/text_voiture_quantite"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/quantite"
                    />
                    <Button
                            android:id="@+id/button_voiture_options"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/options"/>
                    <Button
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:id="@+id/neuf_tech_card_commande_button"
                            android:background="@drawable/item_button_commande"
                            android:text="@string/commnader"
                            android:textSize="13sp"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/colorWhite" />
                </LinearLayout>

            </LinearLayout>

</android.support.v7.widget.CardView>
